--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
                     <img src="/images/logo.png" alt="Алтынай">
                 </div>
                 <div class="col-12 col-md-4 d-flex justify-content-md-center">
-                    <div>
+                    <div class="copyright">
                         © 2020 - Алтынай Санжарова
                     </div>
                 </div>
