--- a/portfolio-list.html
+++ b/portfolio-list.html
@@ -36,104 +36,29 @@
         </div>
     </header>
 
-    <main>
-        <!-- Басты сурет (hero) -->
-        <section class="hero">
-            <div class="hero__overlay"></div>
-            <div class="hero__image">
-                <img src="/images/girl-camera.jpg" alt="Hero image">
+    <main class="container">
+
+        <section class="tabs row align-items-center">
+            <div class="tabs__title col-12 col-lg-6">
+                Жұмыстар
             </div>
-            <div class="hero__content d-flex flex-column justify-content-center align-items-center">
-                <div class="hero__subtitle">кәсіпқой фотограф</div>
-                <div class="hero__title">Алтынай Санжарова</div>
-                <div>
-                    <a href="" class="hero_link">Мен жайлы</a>
-                </div>
+            <div class="col-12 col-lg-6 tabs__list-wrapper">
+                <ul class="tabs__list d-flex justify-content-between">
+                    <li><a href=""> Барлығы </a></li>
+                    <li><a href=""> Портрет </a></li>
+                    <li class="active"><a href=""> Табиғат </a></li>
+                    <li><a href=""> Махаббат </a></li>
+                    <li><a href=""> Мереке </a></li>
+                </ul>
             </div>
         </section>
-        <!-- Басты сурет (hero) -->
 
-        <!-- Жұмыс категориялары -->
-        <section class="container">
-            <section class="category">
-                <div class="category__line"></div>
-                <div class="category__title">
-                    Менің жұмыстарым
-                </div>
-            </section>
+        <br>
+        <br>
+        <br>
+        <br>
 
-            <section class="row category__list">
-
-                <div class="col-12 col-md-6 col-xl-4  category__item">
-                    <div>
-                        <div class="category__image">
-                            <img src="/images/cat-nature.jpg" alt="Табиғат көріністері">
-                        </div>
-                        <div class="category__name">
-                            Табиғат көріністері
-                        </div>
-                    </div>
-                </div>
-
-                <div class="col-12 col-md-6 col-xl-4  category__item">
-                    <div>
-                        <div class="category__image">
-                            <img src="/images/cat-love.jpg" alt="Love story">
-                        </div>
-                        <div class="category__name">
-                            Love story
-                        </div>
-                    </div>
-                </div>
-
-                <div class="col-12 col-md-6 col-xl-4  category__item">
-                    <div>
-                        <div class="category__image">
-                            <img src="/images/cat-party.jpg" alt="Қызықты сәттер">
-                        </div>
-                        <div class="category__name">
-                            Қызықты сәттер
-                        </div>
-                    </div>
-                </div>
-                <div class="col-12 col-md-6 col-xl-4  category__item">
-                    <div>
-                        <div class="category__image">
-                            <img src="/images/cat-wedding.jpg" alt="Той суреттері">
-                        </div>
-                        <div class="category__name">
-                            Той суреттері
-                        </div>
-                    </div>
-                </div>
-
-                <div class="col-12 col-md-6 col-xl-4  category__item">
-                    <div>
-                        <div class="category__image">
-                            <img src="/images/cat-commerce.jpg" alt="Бизнес">
-                        </div>
-                        <div class="category__name">
-                            Бизнес
-                        </div>
-                    </div>
-                </div>
-
-                <div class="col-12 col-md-6 col-xl-4  category__item">
-                    <div>
-                        <div class="category__image">
-                            <img src="/images/cat-portrait.jpg" alt="Портрет">
-                        </div>
-                        <div class="category__name">
-                            Портрет
-                        </div>
-                    </div>
-                </div>
-
-            </section>
-        </section>
-        <!-- Жұмыс категориялары -->
-
-    </main>
+    </main> 
 
 
     <footer id="footer">
