--- a/portfolio-list.html
+++ b/portfolio-list.html
@@ -53,12 +53,76 @@
             </div>
         </section>
 
-        <br>
-        <br>
-        <br>
-        <br>
+        <section class="portfolio__list row">
 
-    </main> 
+            <div class="portfolio__item col-12 col-sm-6 col-md-4">
+                <a>
+                    <img class="portfolio__image" src="/images/portfolio-list/01.jpg" alt="First">
+                    <h2 class="portfolio__title">Таулы өлкенің көріністерінің көрнелігі</h2>
+                </a>
+            </div>
+
+
+            <div class="portfolio__item col-12 col-sm-6 col-md-4">              
+                <a class="">
+                    <img class="portfolio__image" src="/images/portfolio-list/02.jpg" alt="First">
+                    <h2 class="portfolio__title">Өзен бойы</h2>
+                </a>
+            </div>
+
+            <div class="portfolio__item col-12 col-sm-6 col-md-4">
+                <a class="">
+                    <img class="portfolio__image" src="/images/portfolio-list/03.jpg" alt="First">
+                    <h2 class="portfolio__title">Адамзатсыз өмір</h2>
+                </a>
+            </div>
+
+            <div class="portfolio__item col-12 col-sm-6 col-md-4">
+                <a class="">
+                    <img class="portfolio__image" src="/images/portfolio-list/04.jpg" alt="First">
+                    <h2 class="portfolio__title">Адамзатсыз өмір</h2>
+                </a>
+            </div>
+
+            <div class="portfolio__item col-12 col-sm-6 col-md-4">
+                <a class="">
+                    <img class="portfolio__image" src="/images/portfolio-list/05.jpg" alt="First">
+                    <h2 class="portfolio__title">Адамзатсыз өмір</h2>
+                </a>
+            </div>
+
+            <div class="portfolio__item col-12 col-sm-6 col-md-4">
+                <a class="">
+                    <img class="portfolio__image" src="/images/portfolio-list/06.jpg" alt="First">
+                    <h2 class="portfolio__title">Адамзатсыз өмір</h2>
+                </a>
+            </div>
+
+            <div class="portfolio__item col-12 col-sm-6 col-md-4">
+                <a class="">
+                    <img class="portfolio__image" src="/images/portfolio-list/07.jpg" alt="First">
+                    <h2 class="portfolio__title">Адамзатсыз өмір</h2>
+                </a>
+            </div>
+
+            <div class="portfolio__item col-12 col-sm-6 col-md-4">
+                <a class="">
+                    <img class="portfolio__image" src="/images/portfolio-list/08.jpg" alt="First">
+                    <h2 class="portfolio__title">Адамзатсыз өмір</h2>
+                </a>
+            </div>
+
+            <div class="portfolio__item col-12 col-sm-6 col-md-4">
+                <a class="">
+                    <img class="portfolio__image" src="/images/portfolio-list/09.jpg" alt="First">
+                    <h2 class="portfolio__title">Адамзатсыз өмір</h2>
+                </a>
+            </div>
+
+
+        </section>
+
+    </main>
 
 
     <footer id="footer">
