--- a/about-me.html
+++ b/about-me.html
@@ -16,8 +16,8 @@
             <ul class="menu-list">
                 <li><a href="/">Басты бет</a></li>
                 <li><a href="/portfolio-list.html">Портфолио</a></li>
-                <li><a href="">Мен жайлы</a></li>
-                <li><a href="">Байланыс</a></li>
+                <li><a href="/about-me.html">Мен жайлы</a></li>
+                <li><a href="/contact.html">Байланыс</a></li>
             </ul>
             <button class="menu-close"><i class="fas fa-times"></i></button>
         </nav>
@@ -50,7 +50,44 @@
                 </div>
                 <div class="author__line"></div>
             </div>
+        </section>
 
+        <section class="about hero">
+            <div class="hero__overlay"></div>
+            <div class="hero__image">
+                <img src="images/author.jpg" alt="Hero image">
+            </div>
+            <div class="hero__content d-flex flex-column justify-content-center align-items-center">
+                <div class="hero__subtitle">кәсіпқой фотограф</div>
+                <div class="hero__title">Алтынай Санжарова</div>
+            </div>
+        </section>
+
+
+        <section class="row">
+            <div class="stat col-12 col-sm-6 col-md-3">
+                <div class="stat__counter">6</div>
+                <div class="stat__label">жыл</div>
+            </div>
+            <div class="stat col-12 col-sm-6 col-md-3">
+                <div class="stat__counter">396</div>
+                <div class="stat__label">клиент</div>
+            </div>
+            <div class="stat col-12 col-sm-6 col-md-3">
+                <div class="stat__counter">9857</div>
+                <div class="stat__label">фотосурет</div>
+            </div>
+            <div class="stat col-12 col-sm-6 col-md-3">
+                <div class="stat__counter">8</div>
+                <div class="stat__label">жүлде</div>
+            </div>
+        </section>
+
+        <section class="quote">
+            <img src="images/nature-back.jpg" alt="Background">
+            <blockquote>
+                “ Сөзбен айтып жеткізе алмайтын нәрсені, суретпен айтып жеткізуге болады. “
+            </blockquote>
         </section>
 
     </main>
