--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
             <ul class="menu-list">
                 <li><a href="/">Басты бет</a></li>
                 <li><a href="/portfolio-list.html">Портфолио</a></li>
-                <li><a href="">Мен жайлы</a></li>
-                <li><a href="">Байланыс</a></li>
+                <li><a href="/about-me.html">Мен жайлы</a></li>
+                <li><a href="/contact.html">Байланыс</a></li>
             </ul>
             <button class="menu-close"><i class="fas fa-times"></i></button>
         </nav>
