--- a/about-me.html
+++ b/about-me.html
@@ -90,6 +90,37 @@
             </blockquote>
         </section>
 
+        <section class="row">
+            <div class="col-12 col-lg-6 author__info author__bio d-flex flex-column justify-content-center">
+                <p>
+                    Танысайық! Менің атым Алтынай Санжарова, мен Алматы қаласында фотография қызметтерін ұсынамын. Мен
+                    көптеген жылдар бойы фотосурет өнерімен кәсіби айналысамын. Мен үшін бұл жай хобби емес, өзін-өзі
+                    көрсету және әлемді қабылдау тәсілі.
+                </p>
+                <p>
+                    «Өнер» сөзін қолданғанымда қателеспедім, өйткені кез-келген адам қарапайым суретке түсе алады. Бірақ
+                    егер сіз шынымен жоғары көркем және ерекше фотосуреттерді іздесеңіз, онда кәсіби фотограф - бұл
+                    дұрыс шешім.
+                </p>
+                <p>
+                    Алматы - үлкен қала, онда бірінші дәрежелі фотографты табу қиын, бірақ сіз сәттілікке қол жеткізесіз
+                    - сіз менің сайтымдасыз. Менің жұмыстарымды «Портфолио» бөлімінен көре аласыз. Егер олар сіздің
+                    жүрегіңізге әсер етсе, біз сіздермен кездесіп, сіздің бақытты сәттеріңізді әдемі түрде есте
+                    қалдырамыз.
+                </p>
+                <p>
+                    Мінсіз ұйымдастырылған түсіру және менің фотосуретке деген сүйіспеншілігім жарқын эмоцияларға
+                    кепілдік береді, олар із-түзсіз жоғалып кетпейді, бірақ әр фотосуретте көрініс табады. Бірнеше
+                    жылдан кейін сіз фотосессиямен немесе компьютеріңізде папка бар альбомды ашқанда, оларды жұмсақ
+                    күлімсіреп еске түсіресіз. Немесе сіз оларды апта сайын қарайтын шығарсыз. Қалай болғанда да, мен
+                    сізге баға жетпес нәрсе естелік суреттер сыйлаймын.
+                </p>
+            </div>
+            <div class="col-12 col-lg-6 author__image">
+                <img src="images/author-02.jpg" alt="author">
+            </div>
+        </section>
+
     </main>
 
 
